# UR-MVO

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yaml  main_py.cpp  package.xml  setup.py
configs/: configs_aqua.yaml  configs_aqua_arch.yaml  configs_cave.yaml
configs/camera_settings/: aqua.yaml  aqua_arch.yaml  cave.yaml
docker/: Dockerfile  ros_entrypoint.sh  ros_entrypoint_visualization.sh  visualization.Dockerfile
include/: camera.h  dataset.h  debug.h  epipolar_geometry.h  frame.h  g2o_optimization.h  mapping.h  mappoint.h  point_matching.h  read_configs.h  ros2_publisher.h  super_glue.h  super_point.h  thread_publisher.h  timer.h  tracking.h  types.h  utils.h
rviz/: ur_mvo.rviz
scripts/: test.py  vo.py  vo_arch.py
src/: camera.cc  dataset.cc  epipolar_geometry.cc  frame.cc  g2o_optimization.cc  mapping.cc  mappoint.cc  point_matching.cc  ros2_publisher.cc  super_glue.cpp  super_point.cpp  timer.cc  tracking.cc  utils.cc
superpoint/: convert.sh  train.py
superpoint/SP/: augmentation.py  convert_int32.py  convert_superpoint_to_onnx.py  dataset.py  loss.py  model.py  simplify_superpoint.sh
superpoint/data/imgs/train/exp/: meta.txt
ur_mvo/: GT.py  components.py  engine.py
